--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -192,5 +192,8 @@
 
     <footer style="text-align: center; border: solid 5px black; background-color: rgba(206, 15, 15, 0.664); padding: 10px;">
         <p style="font-size: 20px;"> &copy; 2024 Nathan Allen Libo-on</p>
-        <p style="font-size: 20px;"> Contact Information:
+        <p style="font-size: 20px;"> References: </p>
+        <p style="font-size: 20px;"> https://playvalorant.com/en-us/ </p>
+        <p style="font-size: 20px;"> https://www.youtube.com/@GameLeapValorant </p>
+    </footer>
 </body>
