--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-            <img src="../asset/pshslogo.png" width="100" length="100" alt="pshs logo" title="The Official logo">
+            <img src="./asset/pshslogo.png" width="100" length="100" alt="pshs logo" title="The Official logo">
             <h1>
                 Welcome to my 2Q Portfolio
             </h1>
