--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -47,7 +47,7 @@
         <nav>
             <a style="font-size: 20px"href="../index.html"> Home</a> <br>
             <a style="font-size: 20px"href="#"> Aamirs Website</a><br>
-            <a style="font-size: 20px"href="#"> Nicco's Webite</a><br>
+            <a style="font-size: 20px"href="https://niccoarrubio.github.io/2QPortfolioLiArrubio/public/2q1gliarrubio.html"> Nicco's Webite</a><br>
             <a style="font-size: 20px"href="https://nikkodizon.github.io/2QPortfolioLiDizon/public/2Q1GLithiumDizon.html"> Nikko's Website</a>
         </nav>
     </header>
