--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -46,7 +46,7 @@
     </div>
         <nav>
             <a style="font-size: 20px"href="../index.html"> Home</a> <br>
-            <a style="font-size: 20px"href="#"> Aamirs Website</a><br>
+            <a style="font-size: 20px"href="https://aamir0316.github.io/2QPortfolioLiVibal/public/2Q1GLithiumVibal.html"> Aamirs Website</a><br>
             <a style="font-size: 20px"href="https://niccoarrubio.github.io/2QPortfolioLiArrubio/public/2q1gliarrubio.html"> Nicco's Webite</a><br>
             <a style="font-size: 20px"href="https://nikkodizon.github.io/2QPortfolioLiDizon/public/2Q1GLithiumDizon.html"> Nikko's Website</a>
         </nav>
