--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </h1>
         </div>
         <nav>
+            <a href="./public/Q21NGLithiumLibo-on.html"> First Non Graded </a> <br>
             <a href="./public/2Q1GLithiumLibo-on.html"> First Graded</a> <br>
             <a href="#"> Second Graded</a><br>
             <a href="#"> Third Graded</a><br>
