--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
     <link rel="icon" href="./asset/pshslogo.png" sizes="20x20" type="image/png">
     <script src="script.js" defer></script>
 </head>
+<style> 
+    header {
+         padding:0px;
+         text-align: center;
+    }    
+    nav {
+        text-align: center;
+        font-size: 30px;
+    }
+    p {
+        font-size: 30px;
+        text-align: center;
+    }
+    a:link {
+        color: white;
+    }
+    a:visited {
+        color: black;
+    }
+    a:hover{
+        background-color: rgb(141, 21, 21);
+    }
+    footer {
+        text-align: center; 
+        border: solid 5px black; 
+        background-color: rgba(206, 15, 15, 0.664);
+    }
+</style>
 <body>
     <header>
         <div>
