--- a/public/MymainSage.html
+++ b/public/MymainSage.html
@@ -7,9 +7,7 @@
     <meta name="keywords" content="2Q, Portfolio, Projects, Web Development">
     <meta name="author" content="Nathan Allen Libo-on">
     <title>A Guide to Valorant Roles</title> 
-    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="../asset/valorant.png" sizes="20x20" type="image/png">
-    <script src="script.js" defer></script>
 
     <style>
         header {
@@ -45,6 +43,10 @@
         }
         td {
             font-size: 25px;
+        }
+        .sage {
+            margin: 100px;
+            padding: 20px;
         }
         h1 {
             text-align: center;
@@ -84,7 +86,7 @@
             <h3> by NA Libo-on</h3>
     </div>
 </header>
- <section style="background-color: rgba(96, 216, 210, 0.658); border: solid 10px rgba(126, 221, 216, 0.658);">
+ <section class="sage" style="background-color: rgba(96, 216, 210, 0.658); border: solid 10px rgba(126, 221, 216, 0.658);">
     <h1 style="font-size: 50px; font-family: Brush Script MT; text-align: center;"> My Main Sentinal: Sage</h1>
     <div style="text-align: center;">
      <img src="../asset/sage.jpg" width="250" length="250">
