--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -13,15 +13,19 @@
 </head>
 <style>
         header {
-             padding:0px;
+             padding: 1vh;
              text-align: center;
         }    
         nav {
             text-align: center;
         }
-        h1 {
+        p {
             text-align: center;
+            font-size: 3vh;
         }   
+        a {
+            font-size: 4vh;
+        }
         a:link {
             color: white;
         }
@@ -30,6 +34,16 @@
         }
         a:hover{
             background-color: rgb(141, 21, 21);
+        }
+        section {
+            margin-top: 3vh;
+            margin-bottom: 3vh;
+            margin-left: 9vh;
+            margin-right: 9vh;
+            padding: 20px;
+        }
+        .footer > p {
+            font-size: 2vh;
         }
 </style>
 <body style="background-color: rgb(155, 155, 155);">
@@ -43,31 +57,32 @@
             <h3> by NA Libo-on</h3>
     </div>
     </header>
-<body>
-    <h1><b>Sentinels are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on defensive play, <br> with emphasis on supporting the 
+<section>
+    <p><b>Sentinels are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on defensive play, <br> with emphasis on supporting the 
         rest of the team through providing intel, anchoring down sites, and preventing the enemy from flanking.</b></h1>
-    <h1><b>As of October 2025, VALORANT currently has 7 Sentinals</b></h1>
+    <p><b>As of October 2025, VALORANT currently has 7 Sentinals</b></p>
 
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
 
         <nav>
-            <a style="font-size: 50px"href="TheSentinals.html"> Agents Overview</a> <br>
-            <a style="font-size: 50px"href="MymainSage.html"> My Main Sentinal and some Tips and Tricks</a> <br>
-            <a style="font-size: 50px"href="../index.html"> Home</a> <br>
+            <a href="TheSentinals.html"> Agents Overview</a> <br>
+            <a href="MymainSage.html"> My Main Sentinal and some Tips and Tricks</a> <br>
+            <a href="../index.html"> Home</a> <br>
 
 
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
 
-            <a style="font-size: 35px"href="https://aamir0316.github.io/2QPortfolioLiVibal/public/2Q1GLithiumVibal.html"> Aamirs Website</a><br>
-            <a style="font-size: 35px"href="https://niccoarrubio.github.io/2QPortfolioLiArrubio/public/2q1gliarrubio.html"> Nicco's Webite</a><br>
-            <a style="font-size: 35px"href="https://nikkodizon.github.io/2QPortfolioLiDizon/public/2Q1GLithiumDizon.html"> Nikko's Website</a>
+            <a href="https://aamir0316.github.io/2QPortfolioLiVibal/public/2Q1GLithiumVibal.html"> Aamirs Website</a><br>
+            <a href="https://niccoarrubio.github.io/2QPortfolioLiArrubio/public/2q1gliarrubio.html"> Nicco's Webite</a><br>
+            <a href="https://nikkodizon.github.io/2QPortfolioLiDizon/public/2Q1GLithiumDizon.html"> Nikko's Website</a>
         </nav>
+</section>
 </body>
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
-<footer style="text-align: center; border: solid 5px black; background-color: rgba(206, 15, 15, 0.664); padding: 10px;">
-        <p style="font-size: 20px;"> &copy; 2025 Nathan Allen Libo-on</p>
-        <p style="font-size: 20px;"> References: </p>
-        <p style="font-size: 20px;"> VALORANT. (2025, October 17). https://playvalorant.com/en-us/</p>
-        <p style="font-size: 20px;"> GameLeap Valorant Pro Guides. (n.d.). YouTube. https://www.youtube.com/@GameLeapValorant</p>
+<footer class="footer" style="text-align: center; border: solid 5px black; background-color: rgba(206, 15, 15, 0.664); padding: 10px;">
+        <p> &copy; 2025 Nathan Allen Libo-on</p>
+        <p> References: </p>
+        <p> VALORANT. (2025, October 17). https://playvalorant.com/en-us/</p>
+        <p> GameLeap Valorant Pro Guides. (n.d.). YouTube. https://www.youtube.com/@GameLeapValorant</p>
     </footer>
 </html>
