--- a/public/MymainSage.html
+++ b/public/MymainSage.html
@@ -11,11 +11,11 @@
 
     <style>
         header {
-             padding:0px;
+             padding: 1vh;
              text-align: center;
         }    
         p {
-            font-size: 25px; 
+            font-size: 2vh; 
             text-align: justify; 
             text-indent: 30px; 
             margin-right: 250px; 
@@ -29,7 +29,7 @@
            padding-left:5px;
            padding-right:5px;
            text-align: left;
-           font-size:16px;
+           font-size: 2vh;
            font-weight: bold;
         }
         table, th, td {
@@ -45,14 +45,19 @@
             font-size: 25px;
         }
         .sage {
-            margin: 100px;
-            padding: 20px;
+            margin: 5vh;
+            padding: 2vh;
         }
         h1 {
             text-align: center;
+            font-size: 35px; 
+            font-family: Brush Script MT;
         }   
         nav {
             text-align: center;
+        }
+        a {
+            font-size: 4vh
         }
         a:link {
             color: white;
@@ -99,14 +104,14 @@
     </p>
 </br>
 
-    <h1 style="font-size: 35px; font-family: Brush Script MT;"> Tips on playing Sage </h1>
+    <h1> Tips on playing Sage </h1>
         
     <ol>
-        <li style="font-size: 25px;"> Always keep an eye on your teammates' health and be ready to heal or revive them when needed. </li> 
-        <li style="font-size: 25px;"> Use your barrier orb strategically to block enemy movement and line of sight, especially when defending a site. </li>
-        <li style="font-size: 25px;"> Use your slowing orb to control enemy movement and create opportunities for your team to capitalize on. </li>
-        <li style="font-size: 25px;"> Communicate with your team and coordinate your abilities with theirs to maximize their effectiveness. </li>
-        <li style="font-size: 25px;"> Be aware of your positioning and avoid being caught out of position, as Sage is vulnerable to flanking and aggressive pushes. </li>
+        <li> Always keep an eye on your teammates' health and be ready to heal or revive them when needed. </li> 
+        <li> Use your barrier orb strategically to block enemy movement and line of sight, especially when defending a site. </li>
+        <li> Use your slowing orb to control enemy movement and create opportunities for your team to capitalize on. </li>
+        <li> Communicate with your team and coordinate your abilities with theirs to maximize their effectiveness. </li>
+        <li> Be aware of your positioning and avoid being caught out of position, as Sage is vulnerable to flanking and aggressive pushes. </li>
     </ol>
 
 <table  style="border:4px solid black justify; margin-left: auto; margin-right: auto; border-collapse: collapse; width: 80%;">
@@ -162,9 +167,9 @@
 </aside>
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
 <nav>
-            <a style="font-size: 50px"href="2Q1GLithiumLibo-on.html">Go Back?</a> <br>
-            <a style="font-size: 50px"href="TheSentinals.html"> Agents Overview</a> <br>
-            <a style="font-size: 50px"href="../index.html"> Home</a> <br>
+            <a href="2Q1GLithiumLibo-on.html">Go Back?</a> <br>
+            <a href="TheSentinals.html"> Agents Overview</a> <br>
+            <a href="../index.html"> Home</a> <br>
 </nav>
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
 <footer>
