--- a/public/TheSentinals.html
+++ b/public/TheSentinals.html
@@ -12,7 +12,7 @@
 
     <style>
         header {
-             padding:0px;
+             padding: 1vh;
              text-align: center;
         }    
         h2 {
@@ -23,23 +23,22 @@
         }
         .agent {
          overflow: hidden;
-        margin-top: 20px;
-        margin-bottom: 40px;
-        margin-left: 100px;
-        margin-right: 100px;
+        margin-top: 3vh;
+        margin-bottom: 3vh;
+        margin-left: 9vh;
+        margin-right: 9vh;
+        padding: 3vh;
          }
 
         .agent img {
             float: left;
-            border-radius: 10px;
-            margin: 20px;
+            border-radius: 1vh;
+            margin: 2vh;
         }
         p.description {
-            font-size: 25px; 
+            font-size: 2vh; 
             text-align: justify; 
             text-indent: 30px; 
-            margin-right: 250px; 
-            margin-left: 250px; 
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
         nav {
@@ -58,7 +57,7 @@
             text-align: center; 
             border: solid 5px black; 
             background-color: rgba(206, 15, 15, 0.664); 
-            padding: 10px;
+            padding: 1vh;
     }
     </style>
 </head>
