--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <style> 
     header {
-         padding:0px;
+         padding: 0px;
          text-align: center;
     }    
     nav {
@@ -21,11 +21,15 @@
         font-size: 30px;
     }
     p {
-        font-size: 30px;
+        height: 3vh;
+        width: 100vw;
         text-align: center;
     }
+    a{
+        font-size: 2vh 2vw;
+    }
     a:link {
-        color: white;
+        color: rgb(77, 76, 75);
     }
     a:visited {
         color: black;
