--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -13,7 +13,7 @@
 </head>
 <style>
         header {
-             padding: 1vh;
+             padding: 10px;
              text-align: center;
         }    
         nav {
@@ -21,10 +21,11 @@
         }
         p {
             text-align: center;
-            font-size: 3vh;
+            height: 5vh;
         }   
         a {
-            font-size: 4vh;
+            height: 3vh;
+            width: 100vw;
         }
         a:link {
             color: white;
@@ -43,7 +44,8 @@
             padding: 20px;
         }
         .footer > p {
-            font-size: 2vh;
+            height: 3vh;
+            text-align: center;
         }
 </style>
 <body style="background-color: rgb(155, 155, 155);">
@@ -62,7 +64,7 @@
         rest of the team through providing intel, anchoring down sites, and preventing the enemy from flanking.</b></h1>
     <p><b>As of October 2025, VALORANT currently has 7 Sentinals</b></p>
 
-<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
+<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------</h2>
 
         <nav>
             <a href="TheSentinals.html"> Agents Overview</a> <br>
@@ -70,7 +72,7 @@
             <a href="../index.html"> Home</a> <br>
 
 
-<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
+<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------</h2>
 
             <a href="https://aamir0316.github.io/2QPortfolioLiVibal/public/2Q1GLithiumVibal.html"> Aamirs Website</a><br>
             <a href="https://niccoarrubio.github.io/2QPortfolioLiArrubio/public/2q1gliarrubio.html"> Nicco's Webite</a><br>
@@ -78,7 +80,7 @@
         </nav>
 </section>
 </body>
-<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
+<h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------</h2>
 <footer class="footer" style="text-align: center; border: solid 5px black; background-color: rgba(206, 15, 15, 0.664); padding: 10px;">
         <p> &copy; 2025 Nathan Allen Libo-on</p>
         <p> References: </p>
