--- a/public/2Q1GLithiumLibo-on.html
+++ b/public/2Q1GLithiumLibo-on.html
@@ -8,48 +8,12 @@
     <meta name="author" content="Nathan Allen Libo-on">
     <title>A Guide to Valorant Roles</title>
     <link rel="icon" href="../asset/valorant.png" sizes="20x20" type="image/png">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 
 </head>
-<style>
-        header {
-             padding: 10px;
-             text-align: center;
-        }    
-        nav {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-            height: 5vh;
-        }   
-        a {
-            height: 3vh;
-            width: 100vw;
-        }
-        a:link {
-            color: white;
-        }
-        a:visited {
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(141, 21, 21);
-        }
-        section {
-            margin-top: 3vh;
-            margin-bottom: 3vh;
-            margin-left: 9vh;
-            margin-right: 9vh;
-            padding: 20px;
-        }
-        .footer > p {
-            height: 3vh;
-            text-align: center;
-        }
-</style>
-<body style="background-color: rgb(155, 155, 155);">
-    <header style="border: solid 5px black; background-color: rgba(206, 15, 15, 0.664);">
+<body>
+    <header>
         <div>
             <img src="../asset/pshslogo.png" width="100" length="100" alt="pshs logo" title="The Official logo">
         </div>
@@ -59,10 +23,10 @@
             <h3> by NA Libo-on</h3>
     </div>
     </header>
-<section>
-    <p><b>Sentinels are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on defensive play, <br> with emphasis on supporting the 
+<section style="margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 20px;">
+    <p style="text-align: center"><b>Sentinels are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on defensive play, <br> with emphasis on supporting the 
         rest of the team through providing intel, anchoring down sites, and preventing the enemy from flanking.</b></h1>
-    <p><b>As of October 2025, VALORANT currently has 7 Sentinals</b></p>
+    <p style="text-align: center"><b>As of October 2025, VALORANT currently has 7 Sentinals</b></p>
 
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------</h2>
 
@@ -81,10 +45,10 @@
 </section>
 </body>
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------</h2>
-<footer class="footer" style="text-align: center; border: solid 5px black; background-color: rgba(206, 15, 15, 0.664); padding: 10px;">
-        <p> &copy; 2025 Nathan Allen Libo-on</p>
-        <p> References: </p>
-        <p> VALORANT. (2025, October 17). https://playvalorant.com/en-us/</p>
-        <p> GameLeap Valorant Pro Guides. (n.d.). YouTube. https://www.youtube.com/@GameLeapValorant</p>
+<footer>
+        <p style="text-align: center"> &copy; 2025 Nathan Allen Libo-on</p>
+        <p style="text-align: center"> References: </p>
+        <p style="text-align: center"> VALORANT. (2025, October 17). https://playvalorant.com/en-us/</p>
+        <p style="text-align: center"> GameLeap Valorant Pro Guides. (n.d.). YouTube. https://www.youtube.com/@GameLeapValorant</p>
     </footer>
 </html>
