--- a/public/MymainSage.html
+++ b/public/MymainSage.html
@@ -8,80 +8,11 @@
     <meta name="author" content="Nathan Allen Libo-on">
     <title>A Guide to Valorant Roles</title> 
     <link rel="icon" href="../asset/valorant.png" sizes="20x20" type="image/png">
-
-    <style>
-        header {
-             padding: 1vh;
-             text-align: center;
-        }    
-        p {
-            font-size: 2vh; 
-            text-align: justify; 
-            text-indent: 30px; 
-            margin-right: 250px; 
-            margin-left: 250px; 
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        }
-        nav {
-            text-align: center;
-        }
-        ol li {
-           padding-left:5px;
-           padding-right:5px;
-           text-align: left;
-           font-size: 2vh;
-           font-weight: bold;
-        }
-        table, th, td {
-            border: 1px solid black;
-            padding: 12px;
-            text-align: center;
-        }
-        th {
-            background-color: rgb(38, 93, 243);
-            font-size: 25px;
-        }
-        td {
-            font-size: 25px;
-        }
-        .sage {
-            margin: 5vh;
-            padding: 2vh;
-        }
-        h1 {
-            text-align: center;
-            font-size: 35px; 
-            font-family: Brush Script MT;
-        }   
-        nav {
-            text-align: center;
-        }
-        a {
-            font-size: 4vh
-        }
-        a:link {
-            color: white;
-        }
-        a:visited {
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(141, 21, 21);
-        }
-        footer {
-            text-align: center; 
-            border: solid 5px black; 
-            background-color: rgba(206, 15, 15, 0.664); 
-            padding: 10px;
-        }
-        aside {
-            border: solid 5px black;
-            background-color: rgb(114, 114, 114);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
-<body style="background-color: rgb(155, 155, 155);">
-<header style="border: solid 5px black; background-color: rgba(206, 15, 15, 0.664);">
+<body>
+<header>
         <div>
             <img src="../asset/pshslogo.png" width="100" length="100" alt="pshs logo" title="The Official logo">
         </div>
@@ -91,12 +22,12 @@
             <h3> by NA Libo-on</h3>
     </div>
 </header>
- <section class="sage" style="background-color: rgba(96, 216, 210, 0.658); border: solid 10px rgba(126, 221, 216, 0.658);">
+ <section style="background-color: rgba(96, 216, 210, 0.658); border: solid 10px rgba(126, 221, 216, 0.658); margin: 5vh; padding: 2vh;">
     <h1 style="font-size: 50px; font-family: Brush Script MT; text-align: center;"> My Main Sentinal: Sage</h1>
     <div style="text-align: center;">
      <img src="../asset/sage.jpg" width="250" length="250">
      </div>
-    <p> Sage is my favorite agent in valorant and my most played agent. She is one of the first sentinals added to valorant. Coming from china, her abilities are more suited towards a defensive
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; margin-right: 250px; margin-left: 250px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Sage is my favorite agent in valorant and my most played agent. She is one of the first sentinals added to valorant. Coming from china, her abilities are more suited towards a defensive
         playstyle. These include a healing orb that can heal teammates, a slowing orb that can slow enemies, and a barrier orb that can create a wall to block enemy movement and line 
         of sight. Her ultimate ability allows her revive one dead teammate. I love playing as sage because of her abilities are suited to my playstyle.
         Having the ability to heal and revive teammates makes me very valuable in team fights while not being in the frontlines. Her barriers can also block enemy movement and line of sight, 
@@ -107,11 +38,11 @@
     <h1> Tips on playing Sage </h1>
         
     <ol>
-        <li> Always keep an eye on your teammates' health and be ready to heal or revive them when needed. </li> 
-        <li> Use your barrier orb strategically to block enemy movement and line of sight, especially when defending a site. </li>
-        <li> Use your slowing orb to control enemy movement and create opportunities for your team to capitalize on. </li>
-        <li> Communicate with your team and coordinate your abilities with theirs to maximize their effectiveness. </li>
-        <li> Be aware of your positioning and avoid being caught out of position, as Sage is vulnerable to flanking and aggressive pushes. </li>
+        <li style=" padding-left:5px; padding-right:5px; text-align: left; font-size: 2vh; font-weight: bold;"> Always keep an eye on your teammates' health and be ready to heal or revive them when needed. </li> 
+        <li style=" padding-left:5px; padding-right:5px; text-align: left; font-size: 2vh; font-weight: bold;"> Use your barrier orb strategically to block enemy movement and line of sight, especially when defending a site. </li>
+        <li style=" padding-left:5px; padding-right:5px; text-align: left; font-size: 2vh; font-weight: bold;"> Use your slowing orb to control enemy movement and create opportunities for your team to capitalize on. </li>
+        <li style=" padding-left:5px; padding-right:5px; text-align: left; font-size: 2vh; font-weight: bold;"> Communicate with your team and coordinate your abilities with theirs to maximize their effectiveness. </li>
+        <li style=" padding-left:5px; padding-right:5px; text-align: left; font-size: 2vh; font-weight: bold;"> Be aware of your positioning and avoid being caught out of position, as Sage is vulnerable to flanking and aggressive pushes. </li>
     </ol>
 
 <table  style="border:4px solid black justify; margin-left: auto; margin-right: auto; border-collapse: collapse; width: 80%;">
@@ -122,44 +53,41 @@
         <col span="1" style="background-color: rgb(87, 133, 170);">
     </colgroup>
     <tr>
-        <th>Pros</th>
-        <th>Cons</th>
-        <th>How to Counter these Cons </th>
+        <th style="border: 1px solid black; padding: 12px; text-align: center; background-color: rgb(38, 93, 243);">Pros</th>
+        <th style="border: 1px solid black; padding: 12px; text-align: center; background-color: rgb(38, 93, 243);">Cons</th>
+        <th style="border: 1px solid black; padding: 12px; text-align: center; background-color: rgb(38, 93, 243);">How to Counter these Cons </th>
     </tr>
     <tr>
-        <td>1. Can heal teammates, making her valuable in team fights.</td>
-        <td>1. Limited offensive capabilities, making her less effective in aggressive plays.</td>
-        <td>1. Get better aim! If the enemies are being aggresive they have no chance if you can just one tap them. I suggest practicing on the range.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">1. Can heal teammates, making her valuable in team fights.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">1. Limited offensive capabilities, making her less effective in aggressive plays.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">1. Get better aim! If the enemies are being aggresive they have no chance if you can just one tap them. I suggest practicing on the range.</td>
     </tr>
     <tr>
-        <td>2. Her barriers can block enemy movement and line of sight, providing strategic advantages.</td>
-        <td>2. Relies heavily on team coordination to maximize her healing and support abilities.</td>
-        <td>2. Play with a five stack of friends and play while on a call. Its more fun too! </td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">2. Her barriers can block enemy movement and line of sight, providing strategic advantages.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">2. Relies heavily on team coordination to maximize her healing and support abilities.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">2. Play with a five stack of friends and play while on a call. Its more fun too! </td>
     </tr>
     <tr>
-        <td>3. Her slowing abilities can control enemy movement and create opportunities for her team.</td>
-        <td>3. Vulnerable to flanking and aggressive pushes due to her defensive nature.</td>
-        <td>3. Be aware of your flanks, you are a sentinal and you are tasked with this responsiblity. Let your team push the site while you watch for flanks and heal them.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">3. Her slowing abilities can control enemy movement and create opportunities for her team.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">3. Vulnerable to flanking and aggressive pushes due to her defensive nature.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">3. Be aware of your flanks, you are a sentinal and you are tasked with this responsiblity. Let your team push the site while you watch for flanks and heal them.</td>
     </tr>
     <tr>
-        <td>4. Can revive teammates, making her very valuable when one of your teammates dies.</td>
-        <td>4. The ult is useless when you die first.</td>
-        <td>4. You are not a duelist! Value your life when you have your ult since this is very valuable for the team. Again, focus on just supporting your teammates.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">4. Can revive teammates, making her very valuable when one of your teammates dies.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">4. The ult is useless when you die first.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">4. You are not a duelist! Value your life when you have your ult since this is very valuable for the team. Again, focus on just supporting your teammates.</td>
     </tr>
     <tr>
-        <td>5. Sage is self sustaining since she can heal herself.</td>
-        <td>5. It only heals for 50hp and there is a long cooldown for this ability.</td>
-        <td>5. It depends on the situation. If you are really low might as well heal yourself, and if your the only one on your team then it is only logical to heal yourself. I also suggest prioritizing healing
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">5. Sage is self sustaining since she can heal herself.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">5. It only heals for 50hp and there is a long cooldown for this ability.</td>
+        <td style="border: 1px solid black; padding: 12px; text-align: center;">5. It depends on the situation. If you are really low might as well heal yourself, and if your the only one on your team then it is only logical to heal yourself. I also suggest prioritizing healing
             good players on your team so they can stay alive longer and help you win rounds, but it also depends if your other teammates need healing.
         </td>
     </tr>
-    <tfoot>
-        
-    </tfoot>
 </table>
 </section>
 
-<aside>
+<aside style="border: solid 5px black; background-color: rgb(114, 114, 114);">
     <h2 style="font-size: 30px; text-align: center;"> Video on Valorant Basics</h2>
     <div style="text-align: center;">
     <iframe width="400" height="225" src="https://www.youtube.com/embed/-nO-bWsxLG0" title="Valorant Guide" frameborder="0" allowfullscreen></iframe>
