--- a/public/TheSentinals.html
+++ b/public/TheSentinals.html
@@ -8,61 +8,11 @@
     <meta name="author" content="Nathan Allen Libo-on">
     <title>A Guide to Valorant Roles</title> 
     <link rel="icon" href="../asset/valorant.png" sizes="20x20" type="image/png">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-
-    <style>
-        header {
-             padding: 1vh;
-             text-align: center;
-        }    
-        h2 {
-            text-align: center;
-        }   
-        h3 {
-            text-align: center;
-        }
-        .agent {
-         overflow: hidden;
-        margin-top: 3vh;
-        margin-bottom: 3vh;
-        margin-left: 9vh;
-        margin-right: 9vh;
-        padding: 3vh;
-         }
-
-        .agent img {
-            float: left;
-            border-radius: 1vh;
-            margin: 2vh;
-        }
-        p.description {
-            font-size: 2vh; 
-            text-align: justify; 
-            text-indent: 30px; 
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        }
-        nav {
-            text-align: center;
-        }
-        a:link {
-            color: white;
-        }
-        a:visited {
-            color: black;
-        }
-        a:hover{
-            background-color: rgb(141, 21, 21);
-        }
-        footer {
-            text-align: center; 
-            border: solid 5px black; 
-            background-color: rgba(206, 15, 15, 0.664); 
-            padding: 1vh;
-    }
-    </style>
 </head>
-<body style="background-color: rgb(155, 155, 155);">
-<header style="border: solid 5px black; background-color: rgba(206, 15, 15, 0.664);">
+<body>
+<header>
         <div>
             <img src="../asset/pshslogo.png" width="100" length="100">
         </div>
@@ -73,19 +23,19 @@
     </div>
 </header>
 
-    <section class= "agent" style="background-color: rgb(214, 213, 172); border: solid 10px rgb(148, 147, 112); ">
+    <section style="background-color: rgb(214, 213, 172); border: solid 10px rgb(148, 147, 112); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT; text-align: center;"><b>1. Deadlock </b></h2>
-    <img src="../asset/deadlock.jpg" width="250" length="250">
-    <p class="description">  
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/deadlock.jpg" width="250" length="250">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">  
         Deadlock is he fifth Sentinel added to the game. Coming from Norway, her abilities consist of high-tech nanowires to reel in her 
         enemies or stop them from entering a place or from moving entirely. She is a very useful agent to have on your team and can be  
         annoying for the enemy team. I would recommend using her if you really want your enemies to have a hard time attacking. </p>
     </section>
 
-    <section class= "agent" style="background-color: rgb(224, 222, 105); border: solid 10px rgb(165, 163, 67);">
+    <section style="background-color: rgb(224, 222, 105); border: solid 10px rgb(165, 163, 67); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT;"><b>2. Killjoy </b></h2>
-    <img src="../asset/killjoy.jpg" width="250" length="250">
-    <p class="description"> Killjoy is the third Sentinel added to the game. Originating from Germany, she uses her self-made inventions to assist her in battle. 
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/killjoy.jpg" width="250" length="250">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Killjoy is the third Sentinel added to the game. Originating from Germany, she uses her self-made inventions to assist her in battle. 
         Her utilities include a turret that fires at enemies, a bot that seeks out enemies and explodes, and a lockdown device that dameges
         all enemies in its range. She is a very strong agent when defending and can be very useful when you want to hold down a site. I would
         also recommend her for beginners since her abilities are easy to use and understand. If you get used to her utilities, you can be more
@@ -93,36 +43,36 @@
     </p>
     </section>
 
-    <section class= "agent" style="background-color: rgb(150, 90, 48); border: solid 10px rgb(99, 59, 31);">
+    <section style="background-color: rgb(150, 90, 48); border: solid 10px rgb(99, 59, 31); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT;"> 3. Chamber </h2>
-    <img src="../asset/chamber.png" width="250" length="250">
-    <p class="description">   Chamber is the fourth Sentinel added to the game. He is a French agent, known for his sharp aim,  powerful custom firearms, and teleportation abilities, 
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/chamber.png" width="250" length="250">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Chamber is the fourth Sentinel added to the game. He is a French agent, known for his sharp aim,  powerful custom firearms, and teleportation abilities, 
         allowing him to hold angles, pick off enemies from a distance, and quickly reposition. He is a high skill agent that requires exceptional aim and strategic sense to really use him, 
         which is why I don't recommend him for beginners.  </p>
     </section>
 
-    <section class= "agent" style="background-color: rgb(99, 137, 190); border: solid 10px rgb(58, 87, 121);">
+    <section style="background-color: rgb(99, 137, 190); border: solid 10px rgb(58, 87, 121); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT;"> 4. Cypher </h2>
-    <img src="../asset/cypher.jpg" width="250" length="250">
-    <p class="description">  Cypher was one of the first Sentinels available to play. He is a Moroccan agent who is the embodiment of the spy and 
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/cypher.jpg" width="250" length="250">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">  Cypher was one of the first Sentinels available to play. He is a Moroccan agent who is the embodiment of the spy and 
         infiltrator archetype. Cypher's abilities involves various traps, which daze, restrain, and slow enemies in their range. He can also gather information on where the enemy is at, 
         making him very useful when you're defending. Although a bit complicated, it will be worth it to learn him order to be a useful teammate.</p>
     </section>
 
-    <section class= "agent" style="background-color: rgb(29, 92, 187); border: solid 10px rgb(17, 54, 111);">
+    <section style="background-color: rgb(29, 92, 187); border: solid 10px rgb(17, 54, 111); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT;"> 5. Veto </h2>
-    <img src="../asset/veto.jpg" width="400" length="400">
-    <p class="description"> Veto is the latest agent and sentinal added to the game. He is a senagalese agent and is what most people would consider the most powerful agent in the game
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/veto.jpg" width="400" length="400">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Veto is the latest agent and sentinal added to the game. He is a senagalese agent and is what most people would consider the most powerful agent in the game
         currently because of his abilities. His abilities include an interceptor that can block enemy projectiles and other enemy abbilities, a fragment that can stick to enemies and control
         their movement, and teleportation ability. The most powerful of abilities is his ultimate, which allows him to be basically immortal to all enemy abilities for a period of time. You 
         could consider playing him since he is a new agent and not many strategies have been developed to counter him yet.
     </p>
     </section>
 
-    <section class= "agent" style="background-color: rgb(97, 72, 235); border: solid 10px rgb(61, 45, 141);">
+    <section style="background-color: rgb(97, 72, 235); border: solid 10px rgb(61, 45, 141); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT;"> 6. Vyse </h2>
-    <img src="../asset/vyse.jpg" width="350" length="350">
-    <p class="description"> 
+    <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/vyse.jpg" width="350" length="350">
+    <p style="font-size: 2vh; text-align: justify; text-indent: 30px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> 
        Vyse is the sixth Sentinel added to the game. She is of unknown origin but also a very annoying agent to go against. Her abilities consist of liquid metal to isolate, blind, trap, and 
        disarm  her enemies. If you love being annoying to your enemies, I would recommend playing her. She is a very strong agent when defending and can be very useful when you want to hold down
         a site.
