--- a/public/MymainSage.html
+++ b/public/MymainSage.html
@@ -23,7 +23,7 @@
     </div>
 </header>
  <section style="background-color: rgba(96, 216, 210, 0.658); border: solid 10px rgba(126, 221, 216, 0.658); margin: 5vh; padding: 2vh;">
-    <h1 style="font-size: 50px; font-family: Brush Script MT; text-align: center;"> My Main Sentinal: Sage</h1>
+    <h1 style="font-size: 50px;"> My Main Sentinal: Sage</h1>
     <div style="text-align: center;">
      <img src="../asset/sage.jpg" width="250" length="250">
      </div>
