--- a/public/TheSentinals.html
+++ b/public/TheSentinals.html
@@ -22,7 +22,6 @@
             <h3> by NA Libo-on</h3>
     </div>
 </header>
-
     <section style="background-color: rgb(214, 213, 172); border: solid 10px rgb(148, 147, 112); overflow: hidden; margin-top: 3vh; margin-bottom: 3vh; margin-left: 9vh; margin-right: 9vh; padding: 3vh;">
     <h2 style="font-size: 40px; font-family: Brush Script MT; text-align: center;"><b>1. Deadlock </b></h2>
     <img style="float: left; border-radius: 1vh; margin: 2vh;" src="../asset/deadlock.jpg" width="250" length="250">
@@ -81,9 +80,9 @@
 
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
         <nav>
-            <a style="font-size: 50px"href="2Q1GLithiumLibo-on.html">Go Back?</a> <br>
-            <a style="font-size: 50px"href="MymainSage.html"> My Main Sentinal and some Tips and Tricks</a> <br>
-            <a style="font-size: 50px"href="../index.html"> Home</a> <br>
+            <a href="2Q1GLithiumLibo-on.html">Go Back?</a> <br>
+            <a href="MymainSage.html"> My Main Sentinal and some Tips and Tricks</a> <br>
+            <a href="../index.html"> Home</a> <br>
         </nav>
 <h2 style="text-align: center">--------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
 
