--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <nav>
             <a href="./public/Q21NGLithiumLibo-on.html"> First Non Graded </a> <br>
             <a href="./public/2Q1GLithiumLibo-on.html"> First Graded</a> <br>
-            <a href="#"> Second Graded</a><br>
+            <a href="./public/2Q1GLithiumLibo-on.html"> Second Graded</a><br>
             <a href="#"> Third Graded</a><br>
             <a href="#"> Access to our Project </a>
         </nav>
